# LR4

./: CMakeLists.txt  Task_1  Task_1.cpp  Task_2  Task_2.cpp  Task_3  Task_3.cpp  test  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test6.cpp
LabWork4_PartC/: Context_for_C.c  OdnomerDin  OdnomerDin.c  Task6  Task_4  Task_4.c  Task_5  Task_5.c  Task_6  Task_6.c  lolipop  magic square test  magic square test.c  task_6new  task_6new.c  yanassquare.c  zaebal
